VSE channel preview: strips used as effect operands no more visible #39702

Closed
opened 2014-04-13 16:26:27 +02:00 by Willi · 6 comments

System Information
Win7/64, AMD HD 6850

Blender Version
Broken: 2.70a. Already broken in blender-2.70-25ad7b4 (8th of March). Maybe broken before, but I don't have these nightlies anymore.
Worked: 2.69

Short description of error
In the VSE, if you select the channel in the toolbar of the preview window, the preview remains black.

Exact steps for others to reproduce the error

  • Open VSE
  • Drag one movie strip to channel 1
  • Drag another movie strip to channel 2
  • Select both strips and add a subtract effect strip

If I want to see only channel 1, I go to the the preview window and change "Channel: 0" to "Channel: 1". In 2.69, the movie is displayed whereas in 2.70a, the preview remains black.

**System Information** Win7/64, AMD HD 6850 **Blender Version** Broken: 2.70a. Already broken in blender-2.70-25ad7b4 (8th of March). Maybe broken before, but I don't have these nightlies anymore. Worked: 2.69 **Short description of error** In the VSE, if you select the channel in the toolbar of the preview window, the preview remains black. **Exact steps for others to reproduce the error** - Open VSE - Drag one movie strip to channel 1 - Drag another movie strip to channel 2 - Select both strips and add a subtract effect strip # If I want to see *only* channel 1, I go to the the preview window and change "Channel: 0" to "Channel: 1". In 2.69, the movie is displayed whereas in 2.70a, the preview remains black.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Bastien Montagne changed title from VSE: preview window doesn't display movie sequence to VSE channel preview: strips used as effect operands no more visible 2014-04-13 16:56:21 +02:00
Sergey Sharybin self-assigned this 2014-04-14 10:12:44 +02:00

This issue was referenced by blender/blender-addons-contrib@4863253c2f

This issue was referenced by blender/blender-addons-contrib@4863253c2f9044f146874a4ef7bc8abb1edc1b2b

This issue was referenced by 4863253c2f

This issue was referenced by 4863253c2f9044f146874a4ef7bc8abb1edc1b2b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4863253c2f.

Closed by commit 4863253c2f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39702
No description provided.