Fix T39702: VSE channel preview: strips used as effect operands no more visible